# banshee

./: Makefile  README.md  banshee.desktop  build.sh  meson.build  shriek.desktop
include/: albumview.h  browser.h  chapterview.h  coverart.h  database.h  import.h  models.h  player.h  playlist.h  podcast.h  podcastview.h  radio.h  smartplaylist.h  source.h  transcriptview.h  ui.h  videoview.h
src/: albumview.c  browser.c  chapterview.c  coverart.c  database.c  import.c  main.c  models.c  player.c  playlist.c  podcast.c  podcastview.c  radio.c  smartplaylist.c  source.c  transcriptview.c  ui.c  videoview.c
